--- a/ui5-local.yaml
+++ b/ui5-local.yaml
@@ -6,7 +6,7 @@ metadata:
 type: application
 framework:
   name: SAPUI5
-  version: 1.110.1
+  version: 1.84.1
   libraries:
     - name: sap.m
     - name: sap.ui.core
@@ -32,7 +32,7 @@ server:
         backend:
           - path: /sap
             url: http://ds4:44300
-            client: '110'
+            client: "110"
             destination: DS4
     - name: fiori-tools-preview
       afterMiddleware: fiori-tools-appreload
